-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.11.0
-
None
-
3
-
9223372036854775807
File created with 'lfs setstripe' cannot recover from failover. Simple test like the one below fails:
test_00() {
replay_barrier $SINGLEMDS
$LFS setstripe -c 2 $DIR/$tfile
fail $SINGLEMDS
$CHECKSTAT -t file $DIR/$tfile ||
error "$CHECKSTAT $DIR/$tfile check failed"
}
At first sign the file is not re-created due to problem with LOV EA supplied along with replay, it says LOV MAGIC is 0.
- is related to
-
LU-9514 sanity test 51f times out due to out of memory
-
- Resolved
-